fixed css z-index issues related to #25

--- a/src/main.scss
+++ b/src/main.scss
@@ -15,6 +15,7 @@ th {
 .yasr_header {
 	* {
 		/* use position relative and z-index, as this fixes issue where results div overflows the button (do this to align controls), and divs are not clickable anymore*/
+		z-index: 5;
 		position: relative;
 	}
 	& > * {
