--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -1,7 +1,7 @@
 @import "./variables.scss";
 /**need to reset this: the modal-dialog class conflicts with bootstrap**/
 .modal-dialog.google-visualization-charteditor-dialog {
+	z-index: $zIndex-global;
 	width: auto;
 	margin: inherit;
-	z-index: $zIndex-offset-modal;
 }
