--- a/src/scss/scoped.scss
+++ b/src/scss/scoped.scss
@@ -1,6 +1,5 @@
 @import "./variables.scss";
 .yasr {
-	z-index: $zIndex-main;
 	button.btn_smallscreen {
 		display: none;
 	}
@@ -21,7 +20,7 @@
 		right:0;
 	
 	}
-	margin-top: 5px;
+	background-color:white;
 	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 	font-size: 14px;
 	line-height: 1.428571429;
